results/SpecGenBench/2-shot/log-CalcDuration-2023_11_05_22_38_22.txt
class CalcDuration {
    //@ requires timeSeries != null;
    //@ requires \forall int i; 0 <= i && i < timeSeries.length; timeSeries[i] >= 0;
    //@ requires duration >= 0;
    //@ ensures \result >= 0;
    public int calcDuration(int[] timeSeries, int duration) {
        int ans = 0;
        int expired = 0;
        //@ maintaining ans >= 0;
        //@ maintaining expired >= 0;
        //@ maintaining \forall int i; 0 <= i && i < timeSeries.length; timeSeries[i] >= 0;
        //@ maintaining duration >= 0;
        //@ decreases timeSeries.length - i;
        for (int i = 0; i < timeSeries.length; ++i) {
            if (timeSeries[i] >= expired) {
                ans += duration;
            } else {
                ans += timeSeries[i] + duration - expired;
            }
            expired = timeSeries[i] + duration;
        }
        return ans;
    }
}
/home/max/Documents/JMLGPT/tmp/CalcDuration.java:11: error: variable i is already defined in method calcDuration(int[],int)
        //@ maintaining \forall int i; 0 <= i && i < timeSeries.length; timeSeries[i] >= 0;
                                    ^
1 error

